--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -33,6 +33,7 @@
       "@lifestyle-dashboard/timetracker-widget": [
         "libs/front/ui/timetracker-widget/src/index.ts"
       ],
+      "@lifestyle-dashboard/user": ["libs/shared/user/src/index.ts"],
       "@lifestyle-dashboard/widget": ["libs/shared/widget/src/index.ts"],
       "@lifestyle-dashboard/widget-name-pipe": [
         "libs/front/ui/widget-name-pipe/src/index.ts"
